[gd_scene load_steps=28 format=2]

[ext_resource path="res://all/Stickman.gd" type="Script" id=1]
[ext_resource path="res://anim/Roll/icon.png" type="Texture" id=2]
[ext_resource path="res://anim/Roll/icon1.png" type="Texture" id=3]
[ext_resource path="res://anim/Roll/icon2.png" type="Texture" id=4]
[ext_resource path="res://anim/Roll/icon3.png" type="Texture" id=5]
[ext_resource path="res://anim/Roll/icon4.png" type="Texture" id=6]
[ext_resource path="res://anim/Roll/icon5.png" type="Texture" id=7]
[ext_resource path="res://anim/Roll/icon6.png" type="Texture" id=8]
[ext_resource path="res://anim/Roll/icon7.png" type="Texture" id=9]
[ext_resource path="res://anim/Roll/icon8.png" type="Texture" id=10]
[ext_resource path="res://anim/Roll/icon9.png" type="Texture" id=11]
[ext_resource path="res://anim/Roll/icon10.png" type="Texture" id=12]
[ext_resource path="res://anim/Roll/icon11.png" type="Texture" id=13]
[ext_resource path="res://anim/EnterBlink/enter_blink3.png" type="Texture" id=14]
[ext_resource path="res://anim/EnterBlink/enter_blink2.png" type="Texture" id=15]
[ext_resource path="res://anim/EnterBlink/enter_blink1.png" type="Texture" id=16]
[ext_resource path="res://all/EnterBlink.gd" type="Script" id=17]
[ext_resource path="res://player_states/Player_state_machine.gd" type="Script" id=18]
[ext_resource path="res://player_states/states/in_air/jump.gd" type="Script" id=19]
[ext_resource path="res://player_states/states/on_ground/idle.gd" type="Script" id=20]
[ext_resource path="res://player_states/states/on_ground/Move.gd" type="Script" id=21]
[ext_resource path="res://player_states/states/in_air/Fall.gd" type="Script" id=22]
[ext_resource path="res://player_states/Shoot.gd" type="Script" id=23]
[ext_resource path="res://all/Bullet.tscn" type="PackedScene" id=24]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.3007, 33.6511 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": false,
"name": "double_jump",
"speed": 20.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "enter_blink",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "enter_blink",
"speed": 5.0
} ]

[node name="Stickman" type="KinematicBody2D"]
position = Vector2( 508.537, 264.805 )
collision_mask = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.102398, -0.19146 )
scale = Vector2( 1, 0.941731 )
shape = SubResource( 1 )

[node name="Movement" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"

[node name="EnterBlink" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "enter_blink"
script = ExtResource( 17 )

[node name="State" type="Node" parent="."]
script = ExtResource( 18 )

[node name="Jump" type="Node" parent="State"]
script = ExtResource( 19 )

[node name="Idle" type="Node" parent="State"]
script = ExtResource( 20 )

[node name="Move" type="Node" parent="State"]
script = ExtResource( 21 )

[node name="Fall" type="Node" parent="State"]
script = ExtResource( 22 )

[node name="Shoot" type="Node" parent="."]
script = ExtResource( 23 )

[node name="Bullet" parent="Shoot" instance=ExtResource( 24 )]
[connection signal="animation_finished" from="Movement" to="." method="_on_Movement_animation_finished"]
[connection signal="animation_finished" from="EnterBlink" to="." method="_on_EnterBlink_animation_finished"]
